@@ -1,3 +1,7 @@
+2008-04-12  Andreas Kirschbaum
+
+	* Fix display of negative grace values.
+
 2008-04-11  Andreas Kirschbaum
 
 	* Fix crash when the log window merges duplicate messages.
